# Real-Estate

./: README.md
Backend/: pyproject.toml
Backend/backend/: .env
Backend/backend/PostProperty/: admin.py  apps.py  models.py  urls.py  views.py
Backend/backend/PostProperty/migrations/: 0001_initial.py  0002_remove_propertylisting_floor_plan_and_more.py
Backend/backend/accounts/: admin.py  managers.py  models.py  serializers.py  urls.py  utils.py  views.py
Backend/backend/accounts/migrations/: 0001_initial.py
Backend/backend/backend/: settings.py  urls.py
frontend/: vite.config.js
frontend/src/: App.jsx
frontend/src/Components/Auth/: Login.css  Login.jsx
frontend/src/Components/Buy/: BuyPage.css  BuyPage.jsx  PropertyDetail.css  PropertyDetail.jsx
frontend/src/Components/Home/: AboutGroup.css  AboutGroup.jsx  Home.css  Home.jsx  Project.css  Project.jsx
frontend/src/Components/Sell/: SellPage.css  SellPage.jsx
frontend/src/assets/: p1.avif  p2.avif
frontend/src/utils/: RequireAuth.jsx
